_build/_log
### Starting build.
# Target: command.mli.depends, tags: { package(oUnit), package(yojson), extension:mli, file:command.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -modules command.mli > command.mli.depends # cached
# Target: command.cmi, tags: { package(oUnit), package(yojson), byte, compile, extension:mli, file:command.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -o command.cmi command.mli # cached
# Target: command.ml.depends, tags: { package(oUnit), package(yojson), extension:ml, file:command.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -modules command.ml > command.ml.depends # cached
# Target: command.cmo, tags: { package(oUnit), package(yojson), byte, compile, extension:cmo, extension:ml, file:command.cmo, file:command.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -o command.cmo command.ml # cached
# Target: state.mli.depends, tags: { package(oUnit), package(yojson), extension:mli, file:state.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -modules state.mli > state.mli.depends
# Target: board.mli.depends, tags: { package(oUnit), package(yojson), extension:mli, file:board.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -modules board.mli > board.mli.depends # cached
# Target: board.cmi, tags: { package(oUnit), package(yojson), byte, compile, extension:mli, file:board.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -o board.cmi board.mli # cached
# Target: state.cmi, tags: { package(oUnit), package(yojson), byte, compile, extension:mli, file:state.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -o state.cmi state.mli
# Target: state.ml.depends, tags: { package(oUnit), package(yojson), extension:ml, file:state.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -modules state.ml > state.ml.depends
# Target: state.cmo, tags: { package(oUnit), package(yojson), byte, compile, extension:cmo, extension:ml, file:state.cmo, file:state.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -o state.cmo state.ml
# Target: main.mli.depends, tags: { package(oUnit), package(yojson), extension:mli, file:main.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -modules main.mli > main.mli.depends
# Target: main.cmi, tags: { package(oUnit), package(yojson), byte, compile, extension:mli, file:main.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -o main.cmi main.mli
+ ocamlfind ocamlc -c -package oUnit -package yojson -o main.cmi main.mli
File "main.mli", line 7, characters 29-40:
7 | val is_game_won : State.t -> Adventure.t -> unit
                                 ^^^^^^^^^^^
Error: Unbound module Adventure
Command exited with code 2.
# Compilation unsuccessful.
